rnd/k8s/canary-deploy/frontend-canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
  namespace: app
spec:
  selector:
    app: frontend
    version: canary
  ports:
  - port: 80
    targetPort: 3000
